# sdkd_ligting_gps_v2

./: Makefile  sdkconfig  sdkconfig.old
esp-idf/components/driver/: i2c.c
esp-idf/examples/protocols/pppos_client/main/: pppos_client_main.c
main/: CMakeLists.txt  app_common.c  app_controller.c  app_gps.c  app_main.c  app_modbus.c  app_network.c  app_nextion.c  app_ota.c  app_pppos.c  app_schedule.c  app_storage.c  app_websocket.c  ds3231.c  i2cdev.c
main/include/: app_common.h  app_controller.h  app_gps.h  app_modbus.h  app_network.h  app_nextion.h  app_ota.h  app_pppos.h  app_schedule.h  app_storage.h  app_websocket.h  ds3231.h  i2cdev.h
main/protobuf/: common_proto.pb-c.c  common_proto.pb-c.h  device_proto.pb-c.c  device_proto.pb-c.h  main_proto.pb-c.c  main_proto.pb-c.h  user_proto.pb-c.c  user_proto.pb-c.h
main/protobuf/proto/: client-main-message-v1.proto  client-message-v1.proto  common-message-v1.proto  common_proto.proto  device_proto.proto  gen_message_v1.sh  main_proto.proto  mesh-message-v1.proto  schedule.txt  server-main-message-v1.proto  server-message-v1.proto  user_proto.proto
